--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,31 +16,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "import"],
   "rules": {
-    "no-unused-vars": "error",
-    "eslint-plugin-import/no-unused-modules": [
-      "error",
-      {
-        "unusedExports": true
-      }
-    ],
-    "import/order": [
-      "error",
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ],
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        }
-      }
-    ],
-    "prettier/prettier": "error",
+    "no-unused-vars": "warn",
     "no-multiple-empty-lines": [
       "error",
       {
